# apz-pzpi-21-11-milennyi-ivan

./: .gitignore  README.md  database_dump.sql
Task2/apz-pzpi-21-11-milennyi-ivan-task2/: .env  Cargo.toml
Task2/apz-pzpi-21-11-milennyi-ivan-task2/src/: main.rs
Task2/apz-pzpi-21-11-milennyi-ivan-task2/src/configs/: api_doc.rs  configure.rs  endpoints.rs  logger_wrapper.rs  mod.rs
Task2/apz-pzpi-21-11-milennyi-ivan-task2/src/db/: db_context.rs  mod.rs  service_error.rs
Task2/apz-pzpi-21-11-milennyi-ivan-task2/src/db/services/: breed_service.rs  feed_service.rs  feed_supply_service.rs  feeding_log_service.rs  feeding_logs_service.rs  (+7 more)
Task2/apz-pzpi-21-11-milennyi-ivan-task2/src/endpoints/: breed_endpoints.rs  feed_endpoints.rs  feed_supply_endpoints.rs  feeding_log_endpoints.rs  mod.rs  shearing_log_endpoints.rs  sheep_endpoints.rs  shepherd_endpoints.rs  storekeeper_endpoints.rs  temperature_scanner_endpoints.rs  utils.rs
Task2/apz-pzpi-21-11-milennyi-ivan-task2/src/json_structs/: authorize_json.rs  change_for_sheep_json.rs  change_id_json.rs  change_shepherd_json.rs  mod.rs  path_id.rs  temperature_scanner_auth_json.rs  temperature_scanner_temp_json.rs
Task2/apz-pzpi-21-11-milennyi-ivan-task2/src/models/: breed.rs  feed.rs  feed_supply.rs  feeding_log.rs  mod.rs  shearing_log.rs  sheep.rs  shepherd.rs  storekeeper.rs  temperature_scanner.rs
Task2/apz-pzpi-21-11-milennyi-ivan-task2/src/view_models/: breed_vm.rs  feed_supply_vm.rs  feed_vm.rs  feeding_log_vm.rs  shearing_log_vm.rs  sheep_vm.rs  shepherd_vm.rs  storekeeper_vm.rs  temperature_scanner_vm.rs
(+119 files in other folders)
