[package]
name = "apz-pzpi-21-11-milennyi-ivan-task2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
async-trait = "0.1.75"
derive_more = "0.99.17"
serde_json = "1.0.114"
serde = {version = "1.0.193", features = ["derive"]}
sqlx = {version = "0.7.3", features = ["mysql", "runtime-async-std", "tls-native-tls"]}
uuid = "1.6.1"
validator = {version = "0.16.1", features = ["derive"]}
utoipa = { version = "4.1.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
dotenv = "0.15.0"
once_cell = "1.19.0"
